Add enums for validators